--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,11 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
     <name>JavaLambdasAndStreams</name>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
+    </dependencies>
 </project>
